# gst-plugin-dtsdownmix

./: Makefile.am  configure.ac  gstdtsdownmix.c
